# anki-extract

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  check.html  check.py  driver.html  driver.py  extract.html  extract.py  extract_anki.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: pylint.yml
_sources/: check.rst.txt  index.rst.txt
docs/source/: conf.py  driver.rst  extract.rst  index.rst  modules.rst
