[project]
name = "anki-extract"
version = "0.1.0"
description = "Extract Anki flashcards to JSON."
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
  | media
  | meta
  | .*\.egg-info
  | .*\.egg
  | .*\.apkg
  | .*\.anki2
  | .*\.anki21
  | .*\.db
  | .*\.sqlite
  | .*\.sqlite3
  | .*\.json
  | .*\.bak
  | .*~
  | .*\.log
  | .*\.swp
  | .*\.DS_Store
  | .*\.ipynb_checkpoints
  | .*\.vscode
)/
'''
